--- a/app/attractions/attractions.css
+++ b/app/attractions/attractions.css
@@ -3,3 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    background-color: aliceblue;
+}
+/* .app-bar{
+    background-color: rgba(255, 224, 177, 0.854);
+    color: black;
+} */
